[tool.poetry]
name = "youtube-ranking"
version = "0.1.0"
description = ""
authors = ["rym903"]
readme = "README.md"
packages = [{include = "youtube_ranking"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.24.3"
pandas = "^2.0.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
